--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <input id="dest" class="input" type="text" name="destination">
                 </div><br>
                 <div class="row">
-                    <label for="firstTrainTime">First Train Time (HH:mm- military time)</label><br>
+                    <label for="firstTrainTime">First Train Time (AM or PM)</label><br>
                     <input id="firstTTime" class="input" type="text" name="firstTrainTime">
                 </div><br>
                 <div class="row">
